# baseball-analytics

./: .gitignore  FANTASY_MLB_AI_COMPLETE.md  MIGRATION.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
agents/explainer/: agent.py
config/: shared_config.yaml
scripts/: setup_dev.ps1
shared/: config.py  schemas.py
src/: build_dataset.py  train_outcome_model.py
